:sparkles: 가격 조건 추가